[Feature] Use chrome webrequest permission to bypass CORS errors [Feature] Add Image status tracking (behind the scene) [Bug] Fix progress stuck when download 404 image [Bug] Fix new tabs not filtered correctly since ID can be duplicated

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,3 +28,13 @@ html, body {
     @extend .text-reset;
   }
 }
+
+.accordion {
+  .collapse > .card-body {
+    padding: 0;
+  }
+}
+
+.card-columns {
+  column-count: 2;
+}
